@@ -4,39 +4,40 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
-import ru.otus.example.di.appcontainer.AppComponentsContainerImpl;
-import ru.otus.example.di.appcontainer.api.AppComponent;
-import ru.otus.example.di.appcontainer.api.AppComponentsContainerConfig;
-import ru.otus.example.di.config.AppConfig;
-import ru.otus.example.di.services.*;
+import ru.otus.appcontainer.AppComponentsContainerImpl;
+import ru.otus.appcontainer.api.AppComponent;
+import ru.otus.appcontainer.api.AppComponentsContainerConfig;
+import ru.otus.config.AppConfig;
+import ru.otus.services.*;
 
 import java.io.PrintStream;
 import java.lang.reflect.Modifier;
 import java.util.Arrays;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatCode;
 
-class ApplicationTest {
+class AppTest {
 
     @DisplayName("Из контекста тремя способами должен корректно доставаться компонент с проставленными полями")
     @ParameterizedTest(name = "Достаем по: {0}")
-    @CsvSource(value = {"GameProcessor, ru.otus.example.di.services.GameProcessor",
-            "GameProcessorImpl, ru.otus.example.di.services.GameProcessor",
-            "gameProcessor, ru.otus.example.di.services.GameProcessor",
+    @CsvSource(value = {"GameProcessor, ru.otus.services.GameProcessor",
+            "GameProcessorImpl, ru.otus.services.GameProcessor",
+            "gameProcessor, ru.otus.services.GameProcessor",
 
-            "IOService, ru.otus.example.di.services.IOService",
-            "IOServiceStreams, ru.otus.example.di.services.IOService",
-            "ioService, ru.otus.example.di.services.IOService",
+            "IOService, ru.otus.services.IOService",
+            "IOServiceStreams, ru.otus.services.IOService",
+            "ioService, ru.otus.services.IOService",
 
-            "PlayerService, ru.otus.example.di.services.PlayerService",
-            "PlayerServiceImpl, ru.otus.example.di.services.PlayerService",
-            "playerService, ru.otus.example.di.services.PlayerService",
+            "PlayerService, ru.otus.services.PlayerService",
+            "PlayerServiceImpl, ru.otus.services.PlayerService",
+            "playerService, ru.otus.services.PlayerService",
 
-            "EquationPreparer,     ru.otus.example.di.services.EquationPreparer",
-            "EquationPreparerImpl, ru.otus.example.di.services.EquationPreparer",
-            "equationPreparer,     ru.otus.example.di.services.EquationPreparer"
+            "EquationPreparer, ru.otus.services.EquationPreparer",
+            "EquationPreparerImpl, ru.otus.services.EquationPreparer",
+            "equationPreparer, ru.otus.services.EquationPreparer"
     })
     public void shouldExtractFromContextCorrectComponentWithNotNullFields(String classNameOrBeanId, Class<?> rootClass) throws Exception {
         var ctx = new AppComponentsContainerImpl(AppConfig.class);
@@ -44,7 +45,7 @@ class ApplicationTest {
         assertThat(classNameOrBeanId).isNotEmpty();
         Object component;
         if (classNameOrBeanId.charAt(0) == classNameOrBeanId.toUpperCase().charAt(0)) {
-            Class<?> gameProcessorClass = Class.forName("ru.otus.example.di.services." + classNameOrBeanId);
+            Class<?> gameProcessorClass = Class.forName("ru.otus.services." + classNameOrBeanId);
             assertThat(rootClass).isAssignableFrom(gameProcessorClass);
 
             component = ctx.getAppComponent(gameProcessorClass);
@@ -52,18 +53,12 @@ class ApplicationTest {
             component = ctx.getAppComponent(classNameOrBeanId);
         }
         assertThat(component).isNotNull();
+        assertThat(rootClass).isAssignableFrom(component.getClass());
 
-        System.out.printf("Class %s %s from %s.\n",
-                rootClass.getName(),
-                (rootClass.isAssignableFrom((Class) component) ? "is assignable from" : "isn't assignable from"),
-                ((Class) component).getName());
-
-        assertThat(rootClass).isAssignableFrom((Class) component);
-
-        var fields = Arrays.stream(((Class) component).getDeclaredFields())
+        var fields = Arrays.stream(component.getClass().getDeclaredFields())
                 .filter(f -> !Modifier.isStatic(f.getModifiers()))
                 .peek(f -> f.setAccessible(true))
-                .toList();
+                .collect(Collectors.toList());
 
         for (var field: fields){
             var fieldValue = field.get(component);
@@ -75,20 +70,23 @@ class ApplicationTest {
 
     @DisplayName("В контексте не должно быть компонентов с одинаковым именем")
     @Test
-    public void shouldNotAllowTwoComponentsWithSameName() throws Exception {
+    public void shouldNotAllowTwoComponentsWithSameName() {
         assertThatCode(()-> new AppComponentsContainerImpl(ConfigWithTwoComponentsWithSameName.class))
                 .isInstanceOf(Exception.class);
     }
 
     @DisplayName("При попытке достать из контекста отсутствующий или дублирующийся компонент, должно выкидываться исключение")
     @Test
-    public void shouldThrowExceptionWhenContainerContainsMoreThanOneOrNoneExpectedComponents() throws Exception {
+    public void shouldThrowExceptionWhenContainerContainsMoreThanOneOrNoneExpectedComponents() {
         var ctx = new AppComponentsContainerImpl(ConfigWithTwoSameComponents.class);
 
         assertThatCode(()-> ctx.getAppComponent(EquationPreparer.class))
                 .isInstanceOf(Exception.class);
 
         assertThatCode(()-> ctx.getAppComponent(PlayerService.class))
+                .isInstanceOf(Exception.class);
+
+        assertThatCode(()-> ctx.getAppComponent("equationPreparer3"))
                 .isInstanceOf(Exception.class);
     }
 
